--- a/css/main.css
+++ b/css/main.css
@@ -132,6 +132,12 @@ body > section {
   font-size: 16px;
   line-height: 24px;
   font-weight: 400;
+
+}
+@media only screen and (max-width:768px ){
+  .lead{
+    text-align: justify;
+  }
 }
 
 .transparent-bg {
