--- a/css/main.css
+++ b/css/main.css
@@ -262,6 +262,7 @@ ul.social-share li a:hover {
   border-radius: 3px;
   color: #fff;
   line-height: 24px;
+  font-weight: 600;
   display: inline-block;
 }
 
