--- a/css/main.css
+++ b/css/main.css
@@ -2009,4 +2009,31 @@ ul.sidebar-gallery {
   right: 30px;
   bottom: 20px;
   color: #fff;
+/* }
+#font-white {
+  border: 4px solid rgba(45, 45, 207, 0.836) ;
+  width: 100%;
+  padding: 20px;
+
+} */
+#font-white tr{
+  border: 1px solid rgb(25, 80, 163)  ;
+}
+#font-white tr th{
+  /* background-image: linear-gradient()rgb(22, 135, 180); */
+  background:rgb(22, 135, 180); /* For browsers that do not support gradients */
+  background: -webkit-repeating-linear-gradient( rgb(22, 135, 180), white,rgb(22, 135, 180)); /* For Safari 5.1 to 6.0 */
+  background: -o-repeating-linear-gradient(rgb(22, 135, 180), white,rgb(22, 135, 180)); /* For Opera 11.1 to 12.0 */
+  background: -moz-repeating-linear-gradient(rgb(22, 135, 180), white,rgb(22, 135, 180)); /* For Firefox 3.6 to 15 */
+  background: repeating-repeating-linear-gradient(rgb(22, 135, 180), white,rgb(22, 135, 180));
+  
+   border: 1px solid black;
+   text-align: center;
+} 
+#font-white tr td{
+  border: 1px solid black;
+  padding-left :20px; 
+}
+#font-white tr:nth-child(2n-1) {
+background-color: rgb(184, 204, 212);
 }
