schedule fixed main css only

--- a/css/main.css
+++ b/css/main.css
@@ -2009,13 +2009,13 @@ ul.sidebar-gallery {
   right: 30px;
   bottom: 20px;
   color: #fff;
-/* }
+}
 #font-white {
   border: 4px solid rgba(45, 45, 207, 0.836) ;
   width: 100%;
   padding: 20px;
 
-} */
+}
 #font-white tr{
   border: 1px solid rgb(25, 80, 163)  ;
 }
