--- a/css/main.css
+++ b/css/main.css
@@ -268,7 +268,7 @@ ul.social-share li a:hover {
 
 @media only screen and (max-width:1024px ){
 	.navbar-inverse .navbar-nav > li > a {
-		font-size: 1.37vw;	
+		font-size: 1.34vw;	
 	}
 }
 
@@ -338,8 +338,16 @@ ul.social-share li a:hover {
 .navbar-inverse .navbar-collapse,
 .navbar-inverse .navbar-form {
   border-top: 0;
+  padding-left: 7vw;
   padding-bottom: 0;
   width: 100%;
+   
+}
+@media only screen and (max-width:1177px ){
+  .navbar-inverse .navbar-collapse,
+  .navbar-inverse .navbar-form{
+    padding: 0;
+  }
 }
 
 @media only screen and (max-width:767px ){
@@ -2006,8 +2014,8 @@ ul.sidebar-gallery {
   
   position: fixed;
   z-index: 1111111;
-  right: 30px;
-  bottom: 20px;
+  right: 0;
+  bottom: 0;
   color: #fff;
 }
 #font-white {
