back button updated

--- a/css/main.css
+++ b/css/main.css
@@ -2014,8 +2014,8 @@ ul.sidebar-gallery {
   
   position: fixed;
   z-index: 1111111;
-  right: 0;
-  bottom: 0;
+  right: 20px;
+  bottom: 30px;
   color: #fff;
 }
 #font-white {
