--- a/css/main.css
+++ b/css/main.css
@@ -2077,9 +2077,11 @@ color: yellow;
   .desc{
     background-color: transparent; 
     position: absolute;
+    left: 20px;
 
   }
   .desc h1{
      color: black !important  ;
      font-family: 'Comic sans MS',sans-serif;
+     font-size: 16px;
   }
