--- a/css/main.css
+++ b/css/main.css
@@ -120,7 +120,7 @@ body > section {
 
 .center {
   text-align: center;
-  padding-bottom: 55px;
+  padding-bottom: 35px;
 }
 
 .scaleIn {
@@ -429,7 +429,8 @@ ul.social-share li a:hover {
 
 #feature {
   background: #f2f2f2;
-  padding-bottom: 40px;
+  padding-bottom: 0;
+  padding-top: 0;
 }
 #feature.transparent-bg {
   margin-top:-40px;
